change all .land and set virtualAccount

--- a/master/احراز هویت کاربران.md
+++ b/master/احراز هویت کاربران.md
@@ -84,7 +84,7 @@ catch (Exception exception)
     }
 ```
 
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
+
 
 # [Java](#tab/java)
 
@@ -113,7 +113,6 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 # [PHP](#tab/php)
 
@@ -140,7 +139,6 @@ $params = [
 
 ```
 
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -159,7 +157,6 @@ console.log(podSSOService.getLoginUrl(getLoginUrlData));
 
 ```
 
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 <div class="tab-end">
 </div>
@@ -207,7 +204,7 @@ catch (Exception exception)
     }
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [Java](#tab/java)
 
@@ -245,7 +242,7 @@ catch (PodException e) {
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [PHP](#tab/php)
 
@@ -269,7 +266,7 @@ catch (PodException e) {
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -296,7 +293,7 @@ podSSOService.getAccessToken(getAccessTokenData)
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 <div class="tab-end">
 </div>
@@ -355,7 +352,7 @@ catch (Exception exception)
     }
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Handshake/handshake</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Handshake/handshake</div>
 
 # [Java](#tab/java)
 
@@ -387,7 +384,7 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Handshake/handshake</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Handshake/handshake</div>
 
 # [PHP](#tab/php)
 
@@ -417,7 +414,7 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Handshake/handshake</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Handshake/handshake</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -447,7 +444,7 @@ podSSOService.handshake(handshakeData)
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Handshake/handshake</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Handshake/handshake</div>
 
 <div class="tab-end">
 </div>
@@ -505,7 +502,7 @@ catch (Exception exception)
     }
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/requestOtpAuthorize</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/requestOtpAuthorize</div>
 
 # [Java](#tab/java)
 
@@ -542,7 +539,7 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/requestOtpAuthorize</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/requestOtpAuthorize</div>
 
 # [PHP](#tab/php)
 
@@ -580,7 +577,7 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/requestOtpAuthorize</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/requestOtpAuthorize</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -614,7 +611,7 @@ podSSOService.authorize(authorizeData)
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/requestOtpAuthorize</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/requestOtpAuthorize</div>
 
 <div class="tab-end">
 </div>
@@ -661,7 +658,7 @@ tion)
     }
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/verifyOtp</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/verifyOtp</div>
 
 # [Java](#tab/java)
 
@@ -694,7 +691,7 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/verifyOtp</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/verifyOtp</div>
 
 
 # [PHP](#tab/php)
@@ -720,7 +717,7 @@ SsoService ssoService = new SsoService();
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/verifyOtp</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/verifyOtp</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -744,7 +741,7 @@ podSSOService.verify(verifyData)
 
 ```
 
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/OTP/verifyOtp</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/OTP/verifyOtp</div>
 
 <div class="tab-end">
 </div>
@@ -787,7 +784,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [Java](#tab/java)
 
@@ -823,7 +820,7 @@ SsoService ssoService = new SsoService();
         }
 
 ```
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [PHP](#tab/php)
 
@@ -843,7 +840,7 @@ SsoService ssoService = new SsoService();
     }
 
 ```
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -867,7 +864,7 @@ podSSOService.getAccessTokenByOtp(getAccessTokenByOtpData)
   });
 
 ```
-<div class="swaggerLink">http://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">http://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 <div class="tab-end">
 </div>
@@ -916,7 +913,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [Java](#tab/java)
 
@@ -952,7 +949,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [PHP](#tab/php)
 
@@ -972,7 +969,7 @@ try {
     }
 
 ```
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -997,7 +994,7 @@ podSSOService.refreshAccessToken(refreshAccessTokenData)
 
 
 ```
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/generateToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/generateToken</div>
 
 <div class="tab-end">
 </div>
@@ -1048,7 +1045,7 @@ tion)
     }
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/revokeToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/revokeToken</div>
 
 # [Java](#tab/java)
 
@@ -1085,7 +1082,7 @@ try {
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/revokeToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/revokeToken</div>
 
 # [PHP](#tab/php)
 
@@ -1107,7 +1104,7 @@ try {
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/revokeToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/revokeToken</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1133,7 +1130,7 @@ podSSOService.revokeToken(revokeTokenData)
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/revokeToken</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/revokeToken</div>
 
 <div class="tab-end">
 </div>
@@ -1184,7 +1181,7 @@ tion)
     }
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/getTokenInfo</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/getTokenInfo</div>
 
 # [Java](#tab/java)
 
@@ -1220,7 +1217,7 @@ try {
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/getTokenInfo</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/getTokenInfo</div>
 
 # [PHP](#tab/php)
 
@@ -1243,7 +1240,7 @@ try {
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/getTokenInfo</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/getTokenInfo</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1269,7 +1266,7 @@ podSSOService.getTokenInfo(getTokenInfoData)
 
 ```
 
-<div class="swaggerLink">https://accounts.pod.land/apidocs/index.html#/Token/getTokenInfo</div>
+<div class="swaggerLink">https://accounts.pod.ir/apidocs/index.html#/Token/getTokenInfo</div>
 
 <div class="tab-end">
 </div>
