--- a/master/خرید(فاکتور).md
+++ b/master/خرید(فاکتور).md
@@ -124,7 +124,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/issueInvoice</div>
 
 # [Java](#tab/java)
 
@@ -172,7 +172,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/issueInvoice</div>
 
 # [PHP](#tab/php)
 
@@ -228,7 +228,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/issueInvoice</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -279,7 +279,7 @@ podBilling.issueInvoice(issueInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/issueInvoice</div>
 
 <div class="tab-end">
 </div>
@@ -301,7 +301,7 @@ podBilling.issueInvoice(issueInvoiceData)
 
 
 ``` javascript'
-https://pay.pod.land/v1/pbc/preinvoice/{HASH}
+https://pay.pod.ir/v1/pbc/preinvoice/{HASH}
 
 ```
 
@@ -357,7 +357,6 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
 
 # [Java](#tab/java)
 
@@ -410,7 +409,6 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://</div>
 
 # [PHP](#tab/php)
 
@@ -453,7 +451,6 @@ $param = [
     }
 
 ```
-<div class="swaggerLink">http://</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -492,7 +489,6 @@ podBilling.createPreInvoice(createPreInvoiceData)
   });
 
 ```
-<div class="swaggerLink">http://</div>
 
 <div class="tab-end">
 </div>
@@ -506,7 +502,7 @@ podBilling.createPreInvoice(createPreInvoiceData)
 
 ## لیست فاکتورها
 
-برای مشاهده فاکتورهایی که کسب و کار شما صادر نموده و وضعیت آنها می توانید به پنل مدیریت کسب و کار خود به آدرس https://panel.pod.land مراجعه نمایید و از منوی « مالی ، فاکتورها » آنها را مشاهده نمایید. این قسمت امکان فیلتر یا جستجو در شرح فاکتورها را نیز دارد.
+برای مشاهده فاکتورهایی که کسب و کار شما صادر نموده و وضعیت آنها می توانید به پنل مدیریت کسب و کار خود به آدرس https://panel.pod.ir مراجعه نمایید و از منوی « مالی ، فاکتورها » آنها را مشاهده نمایید. این قسمت امکان فیلتر یا جستجو در شرح فاکتورها را نیز دارد.
 
 <br/>
 
@@ -552,7 +548,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceList/</div>
 
 # [Java](#tab/java)
 
@@ -590,7 +586,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceList/</div>
 
 # [PHP](#tab/php)
 
@@ -634,7 +630,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceList/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -679,7 +675,7 @@ podBillingService.getInvoiceList(getInvoiceListData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceList/</div>
 
 <div class="tab-end">
 </div>
@@ -738,7 +734,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListByMetadata/</div>
 
 # [Java](#tab/java)
 
@@ -775,7 +771,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListByMetadata/</div>
 
 # [PHP](#tab/php)
 
@@ -804,7 +800,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListByMetadata/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -834,7 +830,7 @@ podBillingService.getInvoiceListByMetadata(getInvoiceListByMetadataData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListByMetadata/</div>
 
 <div class="tab-end">
 </div>
@@ -908,7 +904,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyInvoice/</div>
 
 # [Java](#tab/java)
 
@@ -949,7 +945,7 @@ catch (
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyInvoice/</div>
 
 # [PHP](#tab/php)
 
@@ -974,7 +970,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyInvoice/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1000,7 +996,7 @@ podBillingService.verifyInvoice(verifyInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyInvoice/</div>
 
 <div class="tab-end">
 </div>
@@ -1053,7 +1049,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/closeInvoice/</div>
 
 # [Java](#tab/java)
 
@@ -1093,7 +1089,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/closeInvoice/</div>
 
 # [PHP](#tab/php)
 
@@ -1116,7 +1112,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/closeInvoice/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1142,7 +1138,7 @@ podBillingService.closeInvoice(closeInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/closeInvoice/</div>
 
 <div class="tab-end">
 </div>
@@ -1200,7 +1196,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyAndCloseInvoice/</div>
 
 # [Java](#tab/java)
 
@@ -1239,7 +1235,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyAndCloseInvoice/</div>
 
 # [PHP](#tab/php)
 
@@ -1263,7 +1259,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyAndCloseInvoice/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1289,7 +1285,7 @@ podBillingService.verifyAndCloseInvoice(verifyAndCloseInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/verifyAndCloseInvoice/</div>
 
 <div class="tab-end">
 </div>
@@ -1346,7 +1342,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/cancelInvoice/</div>
 
 # [Java](#tab/java)
 
@@ -1385,7 +1381,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/cancelInvoice/</div>
 
 # [PHP](#tab/php)
 
@@ -1409,7 +1405,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/cancelInvoice/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1434,7 +1430,7 @@ podBillingService.cancelInvoice(cancelInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/cancelInvoice/</div>
 
 <div class="tab-end">
 </div>
@@ -1505,7 +1501,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/reduceInvoice/</div>
 
 # [Java](#tab/java)
 
@@ -1554,7 +1550,7 @@ catch (
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/reduceInvoice/</div>
 
 # [PHP](#tab/php)
 
@@ -1593,7 +1589,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/reduceInvoice/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1623,7 +1619,7 @@ podBillingService.reduceInvoice(reduceInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/reduceInvoice/</div>
 
 <div class="tab-end">
 </div>
@@ -1651,7 +1647,7 @@ F(دانلود فایل)-.->M
 M((پایان))
 </div>
 
-برای مشاهده فاکتورهایی که کسب و کار شما صادر نموده و وضعیت آنها می توانید به پنل مدیریت کسب و کار خود به آدرس https://panel.pod.land مراجعه نمایید و از منوی « مالی ، فاکتورها » آنها را مشاهده نمایید. این قسمت امکان فیلتر یا جستجو در شرح فاکتورها را نیز دارد.
+برای مشاهده فاکتورهایی که کسب و کار شما صادر نموده و وضعیت آنها می توانید به پنل مدیریت کسب و کار خود به آدرس https://panel.pod.ir مراجعه نمایید و از منوی « مالی ، فاکتورها » آنها را مشاهده نمایید. این قسمت امکان فیلتر یا جستجو در شرح فاکتورها را نیز دارد.
 
 <br/>
 همچنین می توانید برای استفاده در برنامه خود، از API زیر استفاده نمایید.
@@ -1722,7 +1718,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListAsFile/</div>
 
 # [Java](#tab/java)
 
@@ -1761,7 +1757,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListAsFile/</div>
 
 # [PHP](#tab/php)
 
@@ -1802,7 +1798,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListAsFile/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1842,7 +1838,7 @@ podBillingService.getInvoiceListAsFile(getInvoiceListAsFileData)
   });
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoiceListAsFile/</div>
 
 <div class="tab-end">
 </div>
@@ -1895,7 +1891,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getExportList/</div>
 
 # [Java](#tab/java)
 
@@ -1937,7 +1933,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getExportList/</div>
 
 # [PHP](#tab/php)
 
@@ -1965,7 +1961,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getExportList/</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1994,7 +1990,7 @@ podBilling.getExportList(getExportListData)
   });
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getExportList/</div>
 
 <div class="tab-end">
 </div>
