--- a/master/سرویس های پایه.md
+++ b/master/سرویس های پایه.md
@@ -59,7 +59,7 @@ catch (Exception exception)
      }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 
 # [Java](#tab/javascript)
@@ -97,7 +97,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
             System.out.println("code : " + e.getCode() + "\nmessage : " + e.getMessage());
         }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 # [PHP](#tab/php)
 
@@ -122,7 +122,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -144,7 +144,7 @@ podCommon.getOtt(getOttData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/ott</div>
 
 <div class="tab-end">
 </div>
@@ -197,7 +197,7 @@ catch (Exception exception)
      }
 ```
 
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
 
 # [Java](#tab/java)
 
@@ -240,7 +240,7 @@ catch (Exception exception)
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
 
 # [PHP](#tab/php)
 
@@ -264,7 +264,7 @@ podCommon.getGuildList(getGuildListData)
   });
   
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -277,7 +277,7 @@ let podCommon= new PodCommonService ({
 });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/guildList</div>
 
 <div class="tab-end">
 </div>
@@ -322,7 +322,7 @@ catch (Exception exception)
                 throw;
      }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
 
 
 # [Java](#tab/java)
@@ -359,7 +359,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
 
 # [PHP](#tab/php)
 
@@ -383,7 +383,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
 
 
 # [Nodejs](#tab/nodejs)
@@ -406,7 +406,7 @@ podCommon.getCurrencyList(getCurrencyListData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/currencyList</div>
 
 <div class="tab-end">
 </div>
@@ -480,7 +480,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
 
 
 # [Java](#tab/java)
@@ -518,7 +518,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
 
 # [PHP](#tab/php)
 
@@ -544,7 +544,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -570,7 +570,7 @@ podCommon.addTagTreeCategory(addTagTreeCategoryData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTreeCategory</div>
 
 
 <div class="tab-end">
@@ -625,7 +625,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
 
 
 # [Java](#tab/java)
@@ -662,7 +662,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
 
 
 # [PHP](#tab/php)
@@ -693,7 +693,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -723,7 +723,7 @@ podCommon.getTagTreeCategoryList(getTagTreeCategoryListData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeCategoryList</div>
 
 <div class="tab-end">
 </div>
@@ -773,7 +773,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
 
 
 # [Java](#tab/java)
@@ -813,7 +813,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
 
 # [PHP](#tab/php)
 
@@ -841,7 +841,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -869,7 +869,7 @@ podCommon.updateTagTreeCategory(updateTagTreeCategoryData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTreeCategory</div>
 
 
 <div class="tab-end">
@@ -918,7 +918,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
 
 
 # [Java](#tab/java)
@@ -957,7 +957,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
 
 
 # [PHP](#tab/php)
@@ -985,7 +985,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1011,7 +1011,7 @@ podCommon.addTagTree(addTagTreeData)
     console.log('error addTagTree ============>', error);
   });
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addTagTree</div>
 
 <div class="tab-end">
 </div>
@@ -1061,7 +1061,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
 
 
 # [Java](#tab/java)
@@ -1100,7 +1100,7 @@ catch (Exception exception)
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
 
 
 # [PHP](#tab/php)
@@ -1129,7 +1129,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1161,7 +1161,7 @@ podCommon.getTagTreeList(getTagTreeListData)
 
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/getTagTreeList</div>
 
 <div class="tab-end">
 </div>
@@ -1211,7 +1211,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
 
 
 # [Java](#tab/java)
@@ -1250,7 +1250,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
 
 # [PHP](#tab/php)
 
@@ -1278,7 +1278,7 @@ $params = [
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1306,7 +1306,7 @@ podCommon.updateTagTree(updateTagTreeData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateTagTree</div>
 
 
 <div class="tab-end">
@@ -1322,7 +1322,7 @@ podCommon.updateTagTree(updateTagTreeData)
 
 برای دریافت لیست شهرها و استان ها می توانید فایل JSON زیر را دانلود و استفاده نمایید.
 
-[دانلود نمونه کد](https://core.pod.land/nzh/file/?fileId=66092&hashCode=168750e0295-0.5580814610197554)
+[دانلود نمونه کد](https://core.pod.ir/nzh/file/?fileId=66092&hashCode=168750e0295-0.5580814610197554)
 
 <div class="box-end">
 </div>
