--- a/master/طرح های اشتراک.md
+++ b/master/طرح های اشتراک.md
@@ -97,7 +97,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
 
 # [Java](#tab/java)
 
@@ -154,7 +154,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
 
 # [PHP](#tab/php)
 
@@ -192,7 +192,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -229,7 +229,7 @@ podSubscription.addSubscriptionPlan(addSubscriptionPlanData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/addSubscriptionPlan</div>
 
 <div class="tab-end">
 </div>
@@ -291,7 +291,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
 
 # [Java](#tab/java)
 
@@ -340,7 +340,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
 
 # [PHP](#tab/php)
 
@@ -378,7 +378,7 @@ try {
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -416,7 +416,7 @@ podSubscription.subscriptionPlanList(subscriptionPlanListData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionPlanList</div>
 
 <div class="tab-end">
 </div>
@@ -472,7 +472,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
 
 # [Java](#tab/java)
 
@@ -511,7 +511,7 @@ try {
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
 
 # [PHP](#tab/php)
 
@@ -545,7 +545,7 @@ $param =
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -576,7 +576,7 @@ podSubscription.updateSubscriptionPlan(updateSubscriptionPlanData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/updateSubscriptionPlan</div>
 
 <div class="tab-end">
 </div>
@@ -657,7 +657,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
 
 # [Java](#tab/java)
 
@@ -696,7 +696,7 @@ catch (Exception exception)
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
 
 # [PHP](#tab/php)
 
@@ -724,7 +724,7 @@ catch (Exception exception)
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -750,7 +750,7 @@ podSubscription.requestSubscription(requestSubscriptionData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/requestSubscription</div>
 
 <div class="tab-end">
 </div>
@@ -799,7 +799,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
 
 # [Java](#tab/java)
 
@@ -839,7 +839,7 @@ catch (Exception exception)
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
 
 # [PHP](#tab/php)
 
@@ -867,7 +867,7 @@ $param =
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -893,7 +893,7 @@ podSubscription.confirmSubscription(confirmSubscriptionData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/confirmSubscription</div>
 
 <div class="tab-end">
 </div>
@@ -943,7 +943,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
 
 # [Java](#tab/java)
 
@@ -983,7 +983,7 @@ catch (Exception exception)
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
 
 # [PHP](#tab/php)
 
@@ -1012,7 +1012,7 @@ catch (Exception exception)
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1039,7 +1039,7 @@ podSubscription.subscriptionList(subscriptionListData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/subscriptionList</div>
 
 <div class="tab-end">
 </div>
@@ -1084,7 +1084,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
 
 # [Java](#tab/java)
 
@@ -1123,7 +1123,7 @@ catch (Exception exception)
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
 
 # [PHP](#tab/php)
 
@@ -1151,7 +1151,7 @@ $param =
 }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1177,7 +1177,7 @@ podSubscription.consumeSubscription(consumeSubscriptionData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/consumeSubscription</div>
 
 <div class="tab-end">
 </div>
