--- a/master/فاکتور تسهیمی.md
+++ b/master/فاکتور تسهیمی.md
@@ -284,7 +284,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
 
 # [Java](#tab/java)
 
@@ -372,7 +372,7 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
 
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
 
 # [PHP](#tab/php)
 
@@ -457,7 +457,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -526,7 +526,7 @@ podBilling.issueMultiInvoice(issueMultiInvoiceData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/issueMultiInvoice</div>
 
 <div class="tab-end">
 </div>
@@ -661,7 +661,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
 
 # [Java](#tab/java)
 
@@ -744,7 +744,7 @@ catch (Exception exception)
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
 
 # [PHP](#tab/php)
 
@@ -810,7 +810,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -862,7 +862,7 @@ podBilling.reduceMultiInvoice({ data: reduceMultiInvoiceData })
 
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoice</div>
 
 <div class="tab-end">
 </div>
@@ -941,7 +941,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
 
 # [Java](#tab/java)
 
@@ -1023,7 +1023,7 @@ catch (Exception exception)
         }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
 
 # [PHP](#tab/php)
 
@@ -1088,7 +1088,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1139,7 +1139,7 @@ podBilling.reduceMultiInvoiceAndCashOut(reduceMultiInvoiceAndCashOutData)
   });
 
 ```
-<div class="swaggerLink">http://sandbox.pod.land:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
+<div class="swaggerLink">http://sandbox.pod.ir:8080/apidocs/swagger-ui.html?srv=/nzh/biz/reduceMultiInvoiceAndCashout</div>
 
 <div class="tab-end">
 </div>
