--- a/master/پرداخت فاکتورها.md
+++ b/master/پرداخت فاکتورها.md
@@ -80,7 +80,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+
 
 # [Java](#tab/java)
 
@@ -108,7 +108,6 @@ return  null;
 }
 
 ```
-<div class="swaggerLink">http://</div>
 
 # [PHP](#tab/php)
 
@@ -131,7 +130,6 @@ return  null;
     }
 
 ```
-<div class="swaggerLink">http://</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -158,7 +156,6 @@ catch (error) {
 }
 
 ```
-<div class="swaggerLink">http://</div>
 
 <div class="tab-end">
 </div>
@@ -221,7 +218,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/payAnyInvoiceByCredit</div>
 
 # [Java](#tab/java)
 
@@ -259,7 +256,7 @@ catch (PodException e) {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/payAnyInvoiceByCredit</div>
 
 # [PHP](#tab/php)
 
@@ -288,7 +285,7 @@ $param =
         print_r($e->getResult());
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/payAnyInvoiceByCredit</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -318,7 +315,7 @@ podBilling.payInvoiceByCredit(payInvoiceByCreditData)
   });
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/payAnyInvoiceByCredit</div>
 
 <div class="tab-end">
 </div>
@@ -533,7 +530,6 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
 
 # [Java](#tab/java)
 
@@ -561,7 +557,6 @@ catch (PodException e) {
 return null;
 
 ```
-<div class="swaggerLink">http://</div>
 
 # [PHP](#tab/php)
 
@@ -585,7 +580,6 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -614,7 +608,6 @@ catch (error) {
 
 
 ```
-<div class="swaggerLink">http://</div>
 
 <div class="tab-end">
 </div>
@@ -690,7 +683,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/sendInvoicePaymentSMS</div>
 
 # [Java](#tab/java)
 
@@ -727,7 +720,7 @@ catch (PodException e) {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/sendInvoicePaymentSMS</div>
 
 # [PHP](#tab/php)
 
@@ -756,7 +749,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/sendInvoicePaymentSMS</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -787,7 +780,7 @@ podBillingService.sendInvoicePaymentSMS(sendInvoicePaymentSMSData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/sendInvoicePaymentSMS</div>
 
 <div class="tab-end">
 </div>
@@ -841,7 +834,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoice</div>
 
 # [Java](#tab/java)
 
@@ -878,7 +871,7 @@ catch (PodException e) {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoice</div>
 
 # [PHP](#tab/php)
 
@@ -904,7 +897,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoice</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -930,7 +923,7 @@ podBillingService.payInvoice(payInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoice</div>
 
 <div class="tab-end">
 </div>
@@ -1000,7 +993,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceByInvoice</div>
 
 # [Java](#tab/java)
 
@@ -1040,7 +1033,7 @@ catch (PodException e) {
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceByInvoice</div>
 
 # [PHP](#tab/php)
 
@@ -1065,7 +1058,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceByInvoice</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1092,7 +1085,7 @@ podBilling.payInvoiceByInvoice(payInvoiceByInvoiceData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceByInvoice</div>
 
 <div class="tab-end">
 </div>
@@ -1188,7 +1181,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceInFuture</div>
 
 # [Java](#tab/java)
 
@@ -1228,7 +1221,7 @@ catch (PodException e) {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceInFuture</div>
 
 # [PHP](#tab/php)
 
@@ -1257,7 +1250,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceInFuture</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1287,7 +1280,7 @@ podBilling.payInvoiceInFuture(payInvoiceInFutureData)
   });
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/payInvoiceInFuture</div>
 
 <div class="tab-end">
 </div>
@@ -1362,7 +1355,7 @@ catch (Exception exception)
         throw;
     }
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoicePaymentLink</div>
 
 # [Java](#tab/java)
 
@@ -1399,7 +1392,7 @@ catch (PodException e) {
 }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoicePaymentLink</div>
 
 # [PHP](#tab/php)
 
@@ -1426,7 +1419,7 @@ $param =
     }
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoicePaymentLink</div>
 
 # [Nodejs](#tab/nodejs)
 
@@ -1455,7 +1448,7 @@ podBillingService.getInvoicePaymentLink(getInvoicePaymentLinkData)
 
 
 ```
-<div class="swaggerLink">http://</div>
+<div class="swaggerLink">http://core.pod.ir/apidocs/swagger-ui.html?srv=/nzh/biz/getInvoicePaymentLink</div>
 
 <div class="tab-end">
 </div>
